# monitoring

./: README.md  pyproject.toml
.github/workflows/: build-wheel.yml  python-app.yml
elastic-logger/: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
elastic-logger/src/infinity_elastic_logs/: elastic_logger.py  elasticsearch_connection.py  elasticsearch_local_logs_sender.py  elasticsearch_sender.py  local_logs_writer.py
elastic-logger/test/unit/: conftest.py  test_elastic_logger.py  test_elastic_search_sender.py  test_elasticsearch_connection.py  test_elasticsearch_local_logs_sender.py  test_local_logs_writer.py
elastic-monitoring/: .env.sample  .gitignore  README.md  docker-compose.yml
elastic-monitoring/src/filebeat/: dockerfile  filebeat.yml
elastic-monitoring/src/metricbeat/: dockerfile  metricbeat.yml
elastic-monitoring/src/nginx-unit/: dockerfile
elastic-monitoring/src/nginx-unit/config/: config.json
elastic-monitoring/src/nginx-unit/webapp/: asgi.py
