[metadata]
name = infinity_elastic_logs
version = 1.0.0
author = ChayaGelberg
author_email = chayag@skyvar.co.il
description = Add a short description here!
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    importlib-metadata; python_version<"3.8"
    sphinx>=3.2.1
    certifi==2023.7.22
    elastic-transport==8.10.0
    elasticsearch==8.10.1
    iniconfig==2.0.0
    packaging==23.2
    pluggy==1.3.0
    pytest==7.4.3
    python-dotenv==1.0.0
    urllib3==2.0.7
[options.packages.find]
where = src